[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/infrastructure_page.gd" id="1_script"]

[node name="InfrastructurePage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Base Infrastructure"

[node name="EnergyDash" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/EnergyDash"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 0

[node name="NetLabel" type="Label" parent="VBoxContainer/EnergyDash/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 1, 1)
theme_override_font_sizes/font_size = 24
text = "NET: +0.0 kW"
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/EnergyDash/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/EnergyDash/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GenLabel" type="Label" parent="VBoxContainer/EnergyDash/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.411765, 0.941176, 0.682353, 1)
text = "GEN: 0.0 kW"
horizontal_alignment = 2

[node name="ConsLabel" type="Label" parent="VBoxContainer/EnergyDash/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.321569, 0.321569, 1)
text = "CONS: 0.0 kW"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4
